Fix Render deployment - updated YAML configs and added backup deploy file

--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,11 @@
 services:
   - type: web
     name: text-to-speech-webapp
-    runtime: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python start.py"
-    plan: free
-    autoDeploy: true
+    runtime: python3
+    buildCommand: pip install -r requirements.txt
+    startCommand: python start.py
     envVars:
       - key: FLASK_ENV
         value: production
-      - key: PYTHON_VERSION
-        value: "3.9"
+      - key: PORT
+        value: 5000
