--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 Flask==2.3.3
 Werkzeug==2.3.7
 
-# Text-to-Speech Engine
-pyttsx3>=2.90
+# Google Cloud Text-to-Speech (replaces pyttsx3 for cloud deployment)
+google-cloud-texttospeech>=2.14.1
 
 # Document Processing
 PyPDF2>=3.0.1
